assets/css/codesquad_css.css
a {
	color: rgb(160,160,158);
}

.active {
	background-color: rgb(203,53,36);
}

/*.bizBak {
	background: url('../img/img_8085_crop2.jpg');
	background-size: cover;
	background-repeat: no-repeat;
}*/

.blackSlantRight {
	position: absolute;
	top: 0;
	right: 0;
	width: 0;
	height: 0;
	border-top: 304px solid transparent;
	border-right: 80px solid black;
	border-bottom: 0; 
}

.blackSlantLeft {
	position: absolute;
	top: 0;
	left: 0;	
	width: 0;
	height: 0;
	border-top: 0;
	border-right: 0;
	border-left: 80px solid black;
	border-bottom: 280px solid transparent; 
}

.blackSlant2 {
	position: absolute;
	top: 0;
	right: 0;
	width: 0;
	height: 0;
	border-top: 280px solid transparent;
	border-right: 80px solid black;
	border-bottom: 0; 
}

body {
	font-family: 'Lato', sans-serif;
	font-size: medium;
	font-weight: 700;
}

.border1 {
	border-style: solid;
	border-color: black;
	border-width: 1px;
}

.btn {
	border-radius: 0;
}

.btnWht {
	/* red text on white */
	color: rgb(203,53,36);
	background-color: white;
	padding: 1% 1.4%;
}

.btnRed {
	/* white text on red */
	color: white;
	background-color: rgb(203,53,36);
}

.btnBuildSkills {
	height: 20%;
	width: 50%;
	text-decoration: none;
	font-size: large;
	border: none;
	cursor: pointer;
	margin: 2% 30%;
	padding: 3% 2%;
}

#btn1stLine {
	padding: 0;
	margin: 0;
}

#btn2ndLine {
	font-size: medium;
	text-align: center;
	padding: 0;
	margin: 0;
}

.card {
	border: 1px solid rgba(0,0,0,.125);
	border-radius: .25rem;
	display: inline-block;
	width: 100%;
	margin: 1rem 0;
}

.card td {
	line-height: 1.7;
}

.card-center {
	margin: 1% 35%;
}

/*.card-deck {
	flex-flow: row wrap;
}

.card-deck .card {
	display: flex;
	flex-direction: column;
	flex: 1 0 0%;
	margin-right: 15px;
	margin-bottom: 0;
  margin-left: 15px;
}*/

.card-header {
    padding: .75rem 1.25rem;
    margin-bottom: 0;
    font-size: large;
    color: white;
    background-color: #343434;
    border-bottom: 1px solid rgba(0,0,0,.125);
}

.card-img-float {
	float: left;
}

.card-img-overlay{
	padding: 0;
}

.card-noBorder {
	border-style: none;
}

.cardPtr {
	top: 8%;
}

.card-TechAdvisor {
	border-style: none;
	padding: 0 10%;
}

.card-title {
	font-size: x-large;
	text-transform: uppercase;
	line-height: 1.1;
	margin:	0;
}

.card-subhead {
	font-size: large;
	text-transform: capitalize;
}

.card-text {
	margin: 1.25rem;
	column-count: 1;
}

.center {
	text-align: center;
}

.container-fluid {
	padding-right: 0;
}

ul li ul li {
	background-color: white;
}

.donateBak {
	background: url('../img/Dudley2Kendall.png');
	background-size: 100% auto;
	/* background-position: center top; */
	background-repeat: no-repeat;
}

.donateBlurb {
	padding: 0 3%;
}

.donateBtn {
	text-decoration: none;
	font-size: large;
	border: none;
	margin: 2% auto;
	width: 160px;
	cursor: pointer;
}

.divSpacer {
	height: 600px;
}

.eventDates {
	border-collapse: collapse;
}

.eventDates td {
	padding: 8px;
}

.eventDates .borderLeft {
	border-left: 1px solid rgba(0,0,0,.125);
}

.FBbutton {
	/*position: absolute;*/
	/*left: 30%;*/
	height: 54px;
	width: auto;
	color: white;
	background-color: rgb(59,89,152); /* FaceBook blue*/
	text-decoration: none;
	font-size: x-large;
	border: none;
	padding: 0 2%;
	margin: 0 20%;
	/*cursor: pointer;	*/
}

.flexContainer {
	display: flex;
	justify-content: center;
	align-items: center;	
}
.flexChild {
	margin: 0 0 3% 3%;
}
.flexCol {
	width: 25%;
}

.footerFont {
	color: rgb(160,160,158);
}

.footerBak {
    background: url('../img/blackBak.png');
    background-size: cover;
    background-repeat: repeat;
}

.footerLogo {
    background: url('../img/logo_inverse.png');
    background-size: cover;
    background-repeat: no-repeat;
    width: 200px;
    height: 80px;
}

.footerHead {
	color: white;
	margin: 2em auto 0.5em;
	text-transform: uppercase;
	font-size: small;
}

.footerBtn {
	text-transform: uppercase;
	text-decoration: none;
	font-size: medium;
	width: 100%;
	height: 2.5em;
	margin: 5% auto 8%;
	border: none;
	cursor: pointer;
}

h1 {
	color: black;
	font-size: xx-large;
	font-weight: bold;
	line-height: 1.3;
	margin: 3% 8% 2% 8%;
}

h2 {
	font-size: xx-large;
	font-weight: bold;
	text-transform: uppercase;
	margin-top: 5%;
}

h3 {
	font-size: x-large;
	font-weight: bold;
	text-transform: uppercase;
}

h4 {
	/*color: white;*/
	font-size: x-large;
	text-transform: uppercase;
	margin:	0;
	padding: 10% 0 0 10%; /*top right bottom left*/
}

h5 {
	font-size: large;
	font-weight: bold;
}

.headlineBtn {
	/*height: 12%;*/
	width: 16%;
	text-decoration: none;
	font-size: large;
	border: none;
	margin: 2% auto;
	cursor: pointer;
}

.headlineBtn1 {
	position: absolute;
	top: 72%;
	left: 31%;
}

.headlineBtn2 {
	position: absolute;
	top: 72%;
	left: 50%;
	/*padding: 0.5% 1.4% 0.5% 1.4%;*/
	padding: 0;
}

.headlineTxt {
	position: absolute;
	color: white;
	font-size: 3.9vw;
	letter-spacing: 2.3px;
	text-shadow: 2px 2px black;
}
.headlineTxt2 {
	/* Sub-head */
	font-size: 2.4vw;
	top: 52%;
	left: 14%;
}
.headlineTxtAbout {
	top: 44%;
	left: 29%;
}
.headlineTxtApply {
	top: 14%;
	left: 51%;
}
.headlineTxtBiz {
	top: 37%;
	left: 10%;
}
.headlineTxtCohort {
	top: 79%;
	left: 31%;
}
.headlineTxtDonate {
	top: 44%;
	left: 26%;
	margin: 20px 0 0 0;
	/* color: black; */
	/* text-shadow: none; */
	padding: 0px 20px;
	background-color: black;
}
.headlineTxtJobs {
	top: 66%;
	left: 28%;
}
.headlineTxtHome {
	top: 37%;
	left: 7%;
}
.headlineTxtStudents {
	top: 51%;
	left: 36%;
}
.headlineTxtVol {
	font-size: 3.3vw;
	top: 8%;
	left: 56.5%;
}

.height400 {
	height: 350px;
}

img {
	padding: 0;
	margin: 0;
}

/* input[type=text] {
	color: rgb(160,160,158);
	width: 100%;
	background-color: rgb(36,34,35);
	padding: 12px 0px;
	border: none;
	border-bottom: 1px solid rgb(160,160,158);
} */

.joinUsBtn {
	position: absolute;
	left: 30%;
	height: 20%;
	width: 40%;
	text-decoration: none;
	font-size: large;
	border: none;
	cursor: pointer;
}

.maxHeight {
	height: 280px;
}

.mobileShow {
	display: none;
}

.mobileHide {
	display: inline;
}

.momentumBak {
    background: url('../img/img_8257_momentum3.jpg');
    background-size: cover;
    background-repeat: no-repeat;
}

.momentumBlurbHead {
	text-transform: uppercase;
	/*margin: -1% 0;*/
	/*padding: 0;*/
}

.momentumBlurbTxt {
	/*position: relative;*/
	/*top: 50%;*/
	font-size: large;
	line-height: 1.5;
	padding: 2% 0 1% 3%;
	/*padding-top: 2%;*/
	/*padding-left: 3%;*/
	/*padding-bottom: 1%;*/
}

.momentumHeadline {
	position: absolute;
	text-align: center;
	top: 5%;
	left: 40%;
}

.momentumRed {
	color: rgb(203,53,36);
	font-size: 3em;
	padding-top: 0.5%;
	padding-bottom: 1%;
}

.momentumTxt {
	position: absolute;
	font-size: large;
}

/* Styling for homepage momentum bullet list */
.momentumUL {
	padding: 0 5%;
	margin: 0;
}

.navbar {
	font-size: 1.1em;
	margin-bottom: 0;
}

.navbar-default {
	border-style: none;
	background-color: white;
}

.navbar-nav li {
	/*top right bottom left*/
	/*padding: 3% 1% 3% 1%;*/
	padding: 10px 15px;
}

.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:hover, 
.navbar-default .navbar-nav > .active > a:focus, li.active {
	background-color: rgb(203,53,36);
	color: white;
}

.navbar-brand {
	padding: 0;	
}

.nav-pills>li.active>a, 
.nav-pills>li.active>a:hover, 
.nav-pills>li.active>a:focus, .nav>li>a:hover, .nav .nav-item {
	color: #343434;
	background-color: white;
}

/*.nav-pills .active {
	border: 2px solid rgb(203,53,36);
}*/

p {
	/* content */
	font-size: medium;
	line-height: 1.7;
	/* border */
	/* padding */
	/* margin */
	margin: 0 auto 15px auto;
}

.padding0 {
	padding: 0;
}

.padding5 {
	padding: 3% 0;
}

.positionRel {
	position: relative;
}

.pOverflow {
	line-height: 1.7;
	font-size: medium;
	padding: 0 1.25rem;
}

.ptrTxt {
	color: white;
}

.red-bar {
	background-color: rgb(203,53,36);
	color: white;
	font-size: x-large;
	text-align: center;
	padding: 1%;
	margin: 0 auto;
}

.red-bar-empty{
	height: 30px;
}

.redSlant {
	position: absolute;
	top: 0;
	left: 0;
	width: 0; 
	height: 0; 
	border-right: 5px solid transparent;
	border-bottom: 304px solid transparent;
	border-left: 80px solid #CB3524; /* CodeSquad red in hex code */
}

.redSlant2 {
	position: absolute;
	top: 0;
	left: 0;
  width: 0; 
  height: 0; 
  border-right: 5px solid transparent;
  border-bottom: 280px solid transparent;
  border-left: 80px solid #CB3524; /* CodeSquad red in hex code */
}

.rowBlk {
	background-color: black;
}

select {
	color: rgb(160,160,158);
	background-color: rgb(36,34,35);
	/*align-self: right;*/
	padding: 12px 0px;
	border: none;
}

.slantBoxBlk {
	background-color: black;
	color: white;
	padding: 5px 20px;
}

.slantBoxRed {
	background-color: rgb(203,53,36);
	color: white;
	padding: 1% 2.5%;
}

.slantBoxRed p, .slantBoxBlk p {
	color: rgb(242,240,240);
}

.slantIndex {
    background: url('../img/9484-cropVert.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    height: 304px;
}

.slantBiz {
    background: url('../img/img_9511.jpg');
    background-size: cover;
    background-repeat: no-repeat;
}

.slantDonate {
	background: url('../img/handshake4.jpg');
	background-size: cover;
	background-repeat: no-repeat;
	height: 280px;
}

.slantStudent {
    background: url('../img/img_8089_crop.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    height: 280px;
}

.slantStudent2 {
    background: url('../img/9484-cropVert.jpg');
    background-size: cover;
    background-repeat: no-repeat;
    height: 280px;
}

.top-red-line {
	height: 5px;
	background-color: rgb(203,53,36);
}

.underline {
	padding-bottom: 1%;
	text-decoration: underline rgb(203,53,36);
	/*width: 100%;*/
/*	border-style: solid;
	border-color: rgb(203,53,36);
	border-width: 1px;*/
}

.width60 {
	width: 60%;
	margin-bottom: 5%;
}

.width80 {
	width: 80%;
}


@media only screen and (max-width: 700px) {
	.card-TechAdvisor {
		padding: 0;	
	}
	.flexCol {
		width: 100%;
	}
	.flexChild {
		width: 100%;
	}	
	h1, h2 {
		font-size: large;
	}
	h3 {
		font-size: large;
		margin-top: 3px;
	}
	.headlineBtn {
    /* For mobile phones: */
    	display: none;
	}
	.headlineTxt {
		font-size: x-large;
	}
	.headlineTxtAbout {
		top: 102%;
		left: 6%;
	}
	.headlineTxtBiz {
		top: 97%;
		left: 0%;
	}
	.headlineTxtHome {
		top: 97%;
		left: 0%;
	}
	.headlineTxtStudents {
		top: 102%;
		left: 9%;
	}
	.headlineTxtVol {
		top: 110%;
		left: 18%;
	}
/*	img.ptr {
		width: 400px;
		height: auto;		
	}*/
	.joinUsBtn, .FBbutton {
		font-size: large;
	}
	.mobileShow {
		display: inline-block;
		padding-bottom: 2%;
	}
	.mobileHide {
		display: none;
	}
	.momentumRed {
		font-size: 2em;
	}
	.nav-pills > li {
		padding: 0 3% 0 3%;
	}
	.nav-pills > li > a {
		padding: 0;
	}
	p {
		font-size: small;
	}
	.pOverflow {
		font-size: small;
	}
	.ptrBloc {
		overflow: auto;
	}
	.ptrImg {
		width: 23%;
		/*height: 30px;*/
		float: left;
		margin: 0 1%;
	}
	.ptrTxt h3 {
		padding: 0 5px 0 5px;
		margin: 0 auto;
	}
	.ptrP {
		margin: 5%;
	}
	.slantBoxRed, .slantBoxBlk {
		padding: 1% 5%;
	}
	.width60, .width80 {
		width: 100%;
	}
}

@media (min-width: 576px) {
	.card-columns {
		-webkit-column-count: 2;
    	-moz-column-count: 2;
    	column-count: 2;
	    -webkit-column-gap: 1.25rem;
	    -moz-column-gap: 1.25rem;
	    column-gap: 1.25rem;
	}
}

